--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     - modify-dotpc-win.patch         # [win]
 
 build:
-  number: 4
+  number: 5
   skip: true                         # [win and py==27]
   # add libode to the whitelist; it can apparently not be found yet when
   # pyode is built
@@ -58,23 +58,27 @@ outputs:
       - lib/pkgconfig/ode.pc                                         # [unix]
       - lib/cmake/ode-{{ soversion }}                                # [unix]
       - bin/ode-config                                               # [unix]
+      - include/ode                                                  # [unix]
       - Library/lib/ode_double.lib                                   # [win]
       - Library/bin/ode_double.dll                                   # [win]
       - Library/lib/pkgconfig/ode.pc                                 # [win]
       - Library/lib/cmake/ode-{{ soversion }}                        # [win]
-      - include/ode
+      - Library/include/ode                                          # [win]
+ 
+     
     test:
       commands:
         - test -f $PREFIX/lib/libode${SHLIB_EXT}                     # [unix]
         - test -f $PREFIX/lib/libode${SHLIB_EXT}.{{ soversion }}     # [linux]
         - test -f $PREFIX/lib/libode.{{ soversion }}${SHLIB_EXT}     # [osx]
-        - test -d $PREFIX/include/ode                                # [unix]
+        - test -d $PREFIX/include/ode/ode.h                          # [unix]
         - test -f $PREFIX/lib/pkgconfig/ode.pc                       # [unix]
         - test -f $PREFIX/lib/cmake/ode-{{ soversion }}/ode-config.cmake  # [unix]
         - if not exist %PREFIX%\Library\lib\ode_double.lib exit 1    # [win]
         - if not exist %PREFIX%\Library\bin\ode_double.dll exit 1    # [win]
         - if not exist %PREFIX%\Library\lib\pkgconfig\ode.pc exit 1  # [win]
         - if not exist %PREFIX%\\Library\\lib\\cmake\\ode-{{ soversion }}\\ode-config.cmake  # [win]
+        - if not exist %PREFIX%\\Library\\include\\ode\\ode.h        # [win]
 
   - name: pyode
     requirements:
