--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,6 +55,8 @@ outputs:
       run_exports:
         # No ABI docs or ABI Laboratory history, better be conservative
         - {{ pin_subpackage(name, max_pin='x.x.x') }}
+      ignore_run_exports_from:
+        - python
     requirements:
       run:
         - pthread-stubs                                              # [unix]
