--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
+    - cython 0.29                            # [build_platform != target_platform]
     - gnuconfig  # [unix]
     - {{ compiler('cxx') }}          # stage 1, library
     - cmake
@@ -48,7 +48,7 @@ requirements:
     - make                           # [unix]
   host:
     - python
-    - cython
+    - cython 0.29
 
 outputs:
   - name: {{ name }}
