Use distutils-to-setuptools.patch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
     - modify-dotpc-win.patch         # [win]
     - fix-pkg-config-setup-py.patch  # [win]
     - macos-do-not-use-deprecated.patch
+    - distutils-to-setuptools.patch
 
 build:
   number: 12
