--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,9 +16,10 @@ source:
     - fix-pkg-config-setup-py.patch  # [win]
     - macos-do-not-use-deprecated.patch
     - distutils-to-setuptools.patch
+    - fix_system_ccd_cmake.patch
 
 build:
-  number: 12
+  number: 13
   run_exports:
     # No ABI docs or ABI Laboratory history, better be conservative
     - {{ pin_subpackage(name, max_pin='x.x.x') }}
@@ -48,6 +49,7 @@ requirements:
     - m2-patch                       # [win]
     - make                           # [unix]
   host:
+    - libccd-double
     - python
     - pip
     - cython 0.29
@@ -91,6 +93,11 @@ outputs:
         - if not exist %PREFIX%\Library\lib\pkgconfig\ode.pc exit 1   # [win]
         - if not exist %PREFIX%\\Library\\lib\\cmake\\ode-{{ soversion }}\\ode-config.cmake exit 1  # [win]
         - if not exist %PREFIX%\\Library\\include\\ode\\ode.h exit 1  # [win]
+        - cmake-package-check ODE
+      requires:
+        - cmake-package-check
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
 
   - name: pyode
     build:
