--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython 0.29                            # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - gnuconfig  # [unix]
     - {{ compiler('cxx') }}          # stage 1, library
     - cmake
